--- a/debian/rules
+++ b/debian/rules
@@ -1,22 +1,24 @@
 #!/usr/bin/make -f
 
 export CARGO_HOME=$(CURDIR)/.cargo-home
-export RUSTFLAGS=
-export DEB_CARGO_CRATE=basic
 
 %:
-	dh $@ --buildsystem=cargo
+	dh $@
+
+override_dh_auto_clean:
+	# Clean the cargo target directory, ignore failure if nothing to clean
+	cargo clean || true
 
 override_dh_auto_configure:
 	# No special configure step needed for a pure Cargo project
 	:
 
 override_dh_auto_build:
-	cargo build --release --locked --frozen --offline
+	# Build only the basic binary, offline with vendored crates
+	cargo build --release --offline
 
 override_dh_auto_test:
-	# You can enable this later if you have tests that work offline
-	# cargo test --locked --frozen --offline
+	# Enable later if you have offline-safe tests
 	:
 
 override_dh_auto_install:
